[gd_scene load_steps=5 format=3 uid="uid://bmap_screen"]

[ext_resource type="Script" uid="uid://dmworldmap1" path="res://ui/world_map_screen.gd" id="1_map"]
[ext_resource type="Theme" uid="uid://c7q6510one1wh" path="res://ui/themes/Underkingdom.tres" id="2_theme"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.08, 0.08, 0.12, 0.98)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.5, 0.7, 0.8, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sidebar"]
bg_color = Color(0.06, 0.06, 0.1, 0.9)
border_width_left = 1
border_color = Color(0.4, 0.5, 0.6, 0.5)

[node name="WorldMapScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_theme")
script = ExtResource("1_map")

[node name="Dimmer" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_theme")
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Header" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.9, 0.6, 1)
theme_override_font_sizes/font_size = 20
text = "WORLD MAP"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="ContentHBox" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 15

[node name="MapContainer" type="AspectRatioContainer" parent="Panel/MarginContainer/VBoxContainer/ContentHBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
ratio = 1.0
stretch_mode = 2

[node name="MapRect" type="TextureRect" parent="Panel/MarginContainer/VBoxContainer/ContentHBox/MapContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture_filter = 1
expand_mode = 1
stretch_mode = 5

[node name="SidebarPanel" type="Panel" parent="Panel/MarginContainer/VBoxContainer/ContentHBox"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_sidebar")

[node name="SidebarMargin" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer/ContentHBox/SidebarPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="SidebarVBox" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/ContentHBox/SidebarPanel/SidebarMargin"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="LegendLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/ContentHBox/SidebarPanel/SidebarMargin/SidebarVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.9, 0.8, 1)
theme_override_font_sizes/font_size = 14
text = "Legend"

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer/ContentHBox/SidebarPanel/SidebarMargin/SidebarVBox"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="LegendContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/ContentHBox/SidebarPanel/SidebarMargin/SidebarVBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 6

[node name="HSeparator2" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="Footer" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 12
text = "Press [M] or [ESC] to close"
horizontal_alignment = 1
